--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,12 @@ services:
       - "5433:5432" 
     volumes:
       - postgres_data:/var/lib/postgresql/data
+  healthcheack:
+    test: ["CMD-SHELL", "pg_isready -U admin -d reservoir_simulation"]
+    interval: 5s
+    timeout: 5s
+    retries: 5
+
   web:
     build: .
     container_name: reservoir_app
