--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,23 +9,25 @@ services:
       POSTGRES_PASSWORD: secretpassword
       POSTGRES_DB: reservoir_simulation
     ports:
-      - "5433:5432" 
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  healthcheack:
-    test: ["CMD-SHELL", "pg_isready -U admin -d reservoir_simulation"]
-    interval: 5s
-    timeout: 5s
-    retries: 5
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d reservoir_simulation"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   web:
     build: .
     container_name: reservoir_app
     ports:
       - "5000:5000"
-    depends_on:
-      - db
     environment:
       - DATABASE_URL=postgresql://admin:secretpassword@db:5432/reservoir_simulation
+    depends_on:
+      db:
+        condition: service_healthy
+
 volumes:
   postgres_data:
